<resources>
    <string name="app_name">ColorTaste</string>
    <string name="choose_color_text">Choose Color</string>
    <string name="red_button_text">Red</string>
    <string name="orange_button_text">Orange</string>
    <string name="yellow_button_text">Yellow</string>
    <string name="green_button_text">Green</string>
    <string name="blue_button_text">Blue</string>
    <string name="indigo_button_text">Indigo</string>
    <string name="violet_button_text">Violet</string>
    <string name="create_custom_button_text">Create Custom Color</string>
    <string name="dialog_prompt">Enter the name of your color and HEX code</string>
    <string name="dialog_color_name">"Color Name: "</string>
    <string name="dialog_color_hex">Color HEX value</string>
</resources>