<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/default_color_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center|center_vertical"
    android:orientation="vertical"
    tools:context=".DefaultColorsActivity">

        <Button
            android:id="@+id/indigo_button"
            style="@style/ColorTaste.DefaultButton"
            android:background="@color/indigo"
            android:text="@string/indigo_button_text"
            android:textColor="@color/yellow" />

        <Button
            android:id="@+id/blue_button"
            style="@style/ColorTaste.DefaultButton"
            android:background="@color/blue"
            android:text="@string/blue_button_text"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/yellow_button"
            style="@style/ColorTaste.DefaultButton"
            android:background="@color/yellow"
            android:text="@string/yellow_button_text"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/violet_button"
            style="@style/ColorTaste.DefaultButton"
            android:background="@color/violet"
            android:text="@string/violet_button_text"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/green_button"
            style="@style/ColorTaste.DefaultButton"
            android:background="@color/green"
            android:text="@string/green_button_text"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/orange_button"
            style="@style/ColorTaste.DefaultButton"
            android:background="@color/orange"
            android:text="@string/orange_button_text"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/red_button"
            style="@style/ColorTaste.DefaultButton"
            android:background="@color/red"
            android:text="@string/red_button_text"
            android:textColor="@color/black" />

</LinearLayout>