<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/dialog_prompt"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_color_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_color_name"
        android:textAlignment="center"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/dialog_name_input"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:singleLine="false" />

    <TextView
        android:id="@+id/dialog_color_hex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_color_hex"
        android:textAlignment="center"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/dialog_hex_input"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp" />

</LinearLayout>